# hypermodern-python

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py
src/hypermodern_python/: wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
