[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["oertr <rinta94oe+git@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oertr/hypermodern-python"
repository = "https://github.com/oertr/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.26.0"
desert = "^2020.11.18"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
isort = "^5.10.1"
python-lsp-server = "^1.2.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
pre-commit = "^2.15.0"
mypy = "^0.910"
typeguard = "^2.13.0"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^0.15.10"
Sphinx = "^4.3.0"
sphinx-autodoc-typehints = "^1.12.0"
codecov = "^2.1.12"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
